# fastapi_template

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
app/: config.py  containers.py  db.py  errors.py  main.py  reporting.py  setup.py  types.py  utils.py
app/api/: api.py
app/api/routes/v1/: address_api.py  health.py  user_api.py
app/cli_commands/: __main__.py  echo.py
app/commands/: __init__.py  __main__.py  address_command.py  echo.py  user_command.py
app/db/: database.py
app/db/tables/: address.py  user.py
app/exceptions/: errors.py
app/health/: handlers.py
app/migrations/: env.py
app/migrations/versions/: dd28df126b8f_add_user_table.py
app/schemas/db/: address_db.py  user.py
app/schemas/request/: address_request.py  user.py
app/schemas/response/: address_response.py  user.py
app/selectors/: user_selectors.py
app/services/: address_service.py  user_service.py
app/users/: db.py  handlers.py  models.py  services.py  tables.py
app/worker/: __init__.py  tasks.py  worker.py
docker/: export.sh  init.sh  lint.sh  lint_check.sh  start.sh  test-ci.sh  test.sh  upgrade_db.sh  wait_for_service.sh  worker.sh
migrations/: env.py
migrations/versions/: 2023_08_17_0836-c793159e6ebf_.py
tests/: conftest.py
tests/factories/: address.py  user.py
tests/integration/address/: test_address_api.py
tests/integration/user/user/: test_api.py
tests/unit/: test_sum.py
tests/users/: constants.py  factories.py  test_handlers.py
